applied json stash on dev